pending implementation delete and add-user in chat room
