# src/main/kotlin/domain/model/ChatRoom.kt
@@ -3,7 +3,7 @@ package com.ktor.domain.model
 
 data class ChatRoom(
     val id: String,
-    val users: List<String>, // lista de user IDs
-    val name: String? = null, // solo en caso de grupos
-    val createdAt: Long = System.currentTimeMillis()
+    val users: List<String>? = null,
+    val name: String? = null,
+    val createdAt: Long? = System.currentTimeMillis()
 )
